# Mirror_PointCloud_Tool

./: CMakeLists.txt
include/: areapick.h  mirror.hpp
res/: ABNORMAL_PART.stl  WZX.stl  coords.txt  mirror.stl
src/: areapick.cpp  main.cpp  mirror.cpp
